2004-08-05  Chris Dean  <ctdean@sokitomi.com>

	* obj-test.scm:  Check for "isName" methods.

2004-08-10  Per Bothner  <per@bothner.com>

	* Makefile.am:  Adjust classpath for CGI tests, so we get
	servlet jar.

2004-08-07  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Overload resolution test is now expected to pass.

2004-08-03  Per Bothner  <per@bothner.com>

	* module2.scm:  Make module extend <pair>, for extra testing.

	* testing.scm (test):  Add commented-out debugging hook.

2004-05-23  Per Bothner  <per@bothner.com>

	New testcase, based on Chris Dean's testcase for Savannah bug #8837.
	* classes1.scm (counter, get-new-count):  Move to the end, specifically
	after use in IdClass1.
	* obj-test.scm:  Move make of <IdClass2> before require, so we can
	test loading of a class without using require.
	Add one new expected failure.

2004-05-17  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  Testcase for Savannah bug #8955.

2004-05-13  Dominique Boucher <dominique.boucher@nuecho.com>

	* module2.scm (<A8711>, <B8711>):  New test - Savannah bug #8711.

2004-05-12  Per Bothner  <per@bothner.com>
	    Chris Dean  <Chris.Dean@sokitomi.com>

	New testcase, for checking overload resolution.
	* MyDate.java:  New class.
	* MyTimestamp.java:  New class, extends MyDate.
	* module3.scm (my-compare):  New function, uses MyTimestamp.
	* Makefile.am:  Update accordingly.
	* obj-test.scm:  New test, calls my-compare.

2004-05-06  Chris Dean  <Chris.Dean@sokitomi.com>

	* module1a.scm:  New module, uses defmacro.
	* module2.scm:  Use new module.
	* Makefile.am:  Update accordingly.
	Test case for bug #8818.

2004-05-04  Per Bothner  <per@bothner.com>

	* num-test.scm:  Add 5 new Comparable/CollectionsLsort tests.

2004-04-22  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New testcase, simplified from psynjtax.pp
	(pre-processed version of portable syntax case implementation).

2004-02-21  Per Bothner  <per@bothner.com>
