@@ -1,5 +1,7 @@
 2004-08-05  Chris Dean  <ctdean@sokitomi.com>
 
+	* classes1.scm (<SimpleA>):  Add mHappy field and isHappy/setHappy
+	methods.
 	* obj-test.scm:  Check for "isName" methods.
 
 2004-08-10  Per Bothner  <per@bothner.com>
